--- a/S03 - Time Series/BLU06 - Machine Learning for Time Series/Exercise notebook.ipynb
+++ b/S03 - Time Series/BLU06 - Machine Learning for Time Series/Exercise notebook.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 28,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 29,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -495,233 +495,8 @@
        "      <th>2013-01-06</th>\n",
        "      <td>1754</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2013-01-07</th>\n",
-       "      <td>1577</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2013-01-08</th>\n",
-       "      <td>1504</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2013-01-09</th>\n",
-       "      <td>1513</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2013-01-10</th>\n",
-       "      <td>1449</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2013-01-11</th>\n",
-       "      <td>1446</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2013-01-12</th>\n",
-       "      <td>1553</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2013-01-13</th>\n",
-       "      <td>1510</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2013-01-14</th>\n",
-       "      <td>1457</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2013-01-15</th>\n",
-       "      <td>1450</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2013-01-16</th>\n",
-       "      <td>1461</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2013-01-17</th>\n",
-       "      <td>1458</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2013-01-18</th>\n",
-       "      <td>1378</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2013-01-19</th>\n",
-       "      <td>1517</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2013-01-20</th>\n",
-       "      <td>1596</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2013-01-21</th>\n",
-       "      <td>1506</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2013-01-22</th>\n",
-       "      <td>1459</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2013-01-23</th>\n",
-       "      <td>1461</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2013-01-24</th>\n",
-       "      <td>1319</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2013-01-25</th>\n",
-       "      <td>1447</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2013-01-26</th>\n",
-       "      <td>1540</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2013-01-27</th>\n",
-       "      <td>1412</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2013-01-28</th>\n",
-       "      <td>1451</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2013-01-29</th>\n",
-       "      <td>1340</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2013-01-30</th>\n",
-       "      <td>1422</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2013-01-31</th>\n",
-       "      <td>1447</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2015-06-04</th>\n",
-       "      <td>1406</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2015-06-05</th>\n",
-       "      <td>1508</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2015-06-06</th>\n",
-       "      <td>1569</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2015-06-07</th>\n",
-       "      <td>1534</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2015-06-08</th>\n",
-       "      <td>1570</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2015-06-09</th>\n",
-       "      <td>1488</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2015-06-10</th>\n",
-       "      <td>1524</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2015-06-11</th>\n",
-       "      <td>1363</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2015-06-12</th>\n",
-       "      <td>1490</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2015-06-13</th>\n",
-       "      <td>1529</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2015-06-14</th>\n",
-       "      <td>1412</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2015-06-15</th>\n",
-       "      <td>1502</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2015-06-16</th>\n",
-       "      <td>1394</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2015-06-17</th>\n",
-       "      <td>1485</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2015-06-18</th>\n",
-       "      <td>1450</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2015-06-19</th>\n",
-       "      <td>1456</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2015-06-20</th>\n",
-       "      <td>1788</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2015-06-21</th>\n",
-       "      <td>1539</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2015-06-22</th>\n",
-       "      <td>1482</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2015-06-23</th>\n",
-       "      <td>1398</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2015-06-24</th>\n",
-       "      <td>1408</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2015-06-25</th>\n",
-       "      <td>1248</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2015-06-26</th>\n",
-       "      <td>1311</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2015-06-27</th>\n",
-       "      <td>1566</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2015-06-28</th>\n",
-       "      <td>1179</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2015-06-29</th>\n",
-       "      <td>1403</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2015-06-30</th>\n",
-       "      <td>1393</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2015-07-01</th>\n",
-       "      <td>1517</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2015-07-02</th>\n",
-       "      <td>1357</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2015-07-03</th>\n",
-       "      <td>1197</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>909 rows × 1 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -731,82 +506,17 @@
        "2013-01-03       1740\n",
        "2013-01-04       1642\n",
        "2013-01-05       1643\n",
-       "2013-01-06       1754\n",
-       "2013-01-07       1577\n",
-       "2013-01-08       1504\n",
-       "2013-01-09       1513\n",
-       "2013-01-10       1449\n",
-       "2013-01-11       1446\n",
-       "2013-01-12       1553\n",
-       "2013-01-13       1510\n",
-       "2013-01-14       1457\n",
-       "2013-01-15       1450\n",
-       "2013-01-16       1461\n",
-       "2013-01-17       1458\n",
-       "2013-01-18       1378\n",
-       "2013-01-19       1517\n",
-       "2013-01-20       1596\n",
-       "2013-01-21       1506\n",
-       "2013-01-22       1459\n",
-       "2013-01-23       1461\n",
-       "2013-01-24       1319\n",
-       "2013-01-25       1447\n",
-       "2013-01-26       1540\n",
-       "2013-01-27       1412\n",
-       "2013-01-28       1451\n",
-       "2013-01-29       1340\n",
-       "2013-01-30       1422\n",
-       "2013-01-31       1447\n",
-       "...               ...\n",
-       "2015-06-04       1406\n",
-       "2015-06-05       1508\n",
-       "2015-06-06       1569\n",
-       "2015-06-07       1534\n",
-       "2015-06-08       1570\n",
-       "2015-06-09       1488\n",
-       "2015-06-10       1524\n",
-       "2015-06-11       1363\n",
-       "2015-06-12       1490\n",
-       "2015-06-13       1529\n",
-       "2015-06-14       1412\n",
-       "2015-06-15       1502\n",
-       "2015-06-16       1394\n",
-       "2015-06-17       1485\n",
-       "2015-06-18       1450\n",
-       "2015-06-19       1456\n",
-       "2015-06-20       1788\n",
-       "2015-06-21       1539\n",
-       "2015-06-22       1482\n",
-       "2015-06-23       1398\n",
-       "2015-06-24       1408\n",
-       "2015-06-25       1248\n",
-       "2015-06-26       1311\n",
-       "2015-06-27       1566\n",
-       "2015-06-28       1179\n",
-       "2015-06-29       1403\n",
-       "2015-06-30       1393\n",
-       "2015-07-01       1517\n",
-       "2015-07-02       1357\n",
-       "2015-07-03       1197\n",
-       "\n",
-       "[909 rows x 1 columns]"
+       "2013-01-06       1754"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "store\n"
+    "store.head()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -827,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -842,24 +552,19 @@
    "source": [
     "# hint1: if the missing dates are holidays you can fill them with 0, since that's\n",
     "# indication that the store was closed.\n",
-    "\n",
     "# hint2: the missing_value_mask should be a boolean Pandas Series with True or False according to if the value\n",
     "# missing or not.\n",
     "\n",
     "# hint3: the missing_value_dates should be a DatetimeIndex with the dates with missing values.\n",
-    "\n",
-    "# store_resampled = \n",
-    "# missing_value_mask =\n",
-    "# missing_value_dates = \n",
-    "# store_cleaned = \n",
-    "\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "store_resampled = store.resample('D').mean()\n",
+    "missing_value_mask = store_resampled.isnull()\n",
+    "missing_value_dates = store_resampled[store_resampled.isnull()['customers']].index\n",
+    "store_cleaned = store_resampled.fillna(0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -917,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -928,22 +633,116 @@
      "solution": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>customers</th>\n",
+       "      <th>lag1</th>\n",
+       "      <th>lag2</th>\n",
+       "      <th>lag3</th>\n",
+       "      <th>target</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2013-01-03</th>\n",
+       "      <td>1740.0</td>\n",
+       "      <td>1642.0</td>\n",
+       "      <td>1643.0</td>\n",
+       "      <td>1754.0</td>\n",
+       "      <td>1903.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2013-01-04</th>\n",
+       "      <td>1642.0</td>\n",
+       "      <td>1643.0</td>\n",
+       "      <td>1754.0</td>\n",
+       "      <td>1577.0</td>\n",
+       "      <td>1740.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2013-01-05</th>\n",
+       "      <td>1643.0</td>\n",
+       "      <td>1754.0</td>\n",
+       "      <td>1577.0</td>\n",
+       "      <td>1504.0</td>\n",
+       "      <td>1642.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2013-01-06</th>\n",
+       "      <td>1754.0</td>\n",
+       "      <td>1577.0</td>\n",
+       "      <td>1504.0</td>\n",
+       "      <td>1513.0</td>\n",
+       "      <td>1643.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2013-01-07</th>\n",
+       "      <td>1577.0</td>\n",
+       "      <td>1504.0</td>\n",
+       "      <td>1513.0</td>\n",
+       "      <td>1449.0</td>\n",
+       "      <td>1754.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            customers    lag1    lag2    lag3  target\n",
+       "date                                                 \n",
+       "2013-01-03     1740.0  1642.0  1643.0  1754.0  1903.0\n",
+       "2013-01-04     1642.0  1643.0  1754.0  1577.0  1740.0\n",
+       "2013-01-05     1643.0  1754.0  1577.0  1504.0  1642.0\n",
+       "2013-01-06     1754.0  1577.0  1504.0  1513.0  1643.0\n",
+       "2013-01-07     1577.0  1504.0  1513.0  1449.0  1754.0"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# store_features = store_cleaned.copy()\n",
-    "# store_features['lag1'] = \n",
-    "# store_features['lag2'] = \n",
-    "# store_features['lag3'] = \n",
-    "# store_features['target'] =\n",
-    "# store_features = \n",
-    "\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "store_features = store_cleaned.copy()\n",
+    "store_features['lag1'] = store_features['customers'].shift(-1)\n",
+    "store_features['lag2'] = store_features['customers'].shift(-2)\n",
+    "store_features['lag3'] = store_features['customers'].shift(-3)\n",
+    "store_features['target'] = store.shift()\n",
+    "store_features= store_features.dropna()\n",
+    "store_features.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -956,7 +755,19 @@
      "solution": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AssertionError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-59-5a7e1ae21c4d>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mexpected_hash\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'a7b263d903e5a6236b7bb778d31fae57462c18f6d888459a9ade11406c1d3729'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[1;32massert\u001b[0m \u001b[0mhashlib\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msha256\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstore_features\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mencode\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhexdigest\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m==\u001b[0m \u001b[0mexpected_hash\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mAssertionError\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "expected_hash = 'a7b263d903e5a6236b7bb778d31fae57462c18f6d888459a9ade11406c1d3729'\n",
     "assert hashlib.sha256(str(store_features.shape).encode()).hexdigest() == expected_hash"
